Resolve Maven compiler from configured JDK homes